# flutter-webview-windows

./: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  migration_guide.md  pubspec.yaml
.github/workflows/: ci.yml
example/: README.md  pubspec.yaml
example/integration_test/: focus_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: webview_windows.dart
lib/src/: enums.dart  webview.dart
test/: webview_windows_test.dart
windows/: CMakeLists.txt  graphics_context.cc  webview.cc  webview.h  webview_bridge.cc  webview_host.cc  webview_host.h  webview_platform.cc  webview_windows_plugin.cc
windows/cmake/: nuget.cmake
windows/test/: CMakeLists.txt  cursor_util_test.cc  string_converter_test.cc  virtual_key_state_test.cc
windows/util/: composition.desktop.interop.h  cursor_util.cc  cursor_util.h  rohelper.cc  rohelper.h  string_converter.h
